change assign content

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-PORT=< port number>
+PORT=<port number>
+NODE_ENV=<your_env>
+SECRET=<secretKey>
+DB URL FORMAT for postgres and mysql
+DEV_DB_URL=postgres://username::password@host:port/databaseName -- for postgres
+DEV_DB_URL=mysql://username::password@host:port/databaseName -- for mysql
