resful api for a book-app

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ SECRET=<secretKey>
 DB URL FORMAT for postgres and mysql
 DEV_DB_URL=postgres://username::password@host:port/databaseName -- for postgres
 DEV_DB_URL=mysql://username::password@host:port/databaseName -- for mysql
+
+DB_NAME=<DB Name>books
+DB_USER=<DB username>
+DB_PASS=<DB password>
+DB_PORT=<DB port>
+DB_HOST=<DB host>
+SECRET_KEY=<any_secret>
