--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DB URL FORMAT for postgres and mysql
 DEV_DB_URL=postgres://username::password@host:port/databaseName -- for postgres
 DEV_DB_URL=mysql://username::password@host:port/databaseName -- for mysql
 
-DB_NAME=<DB Name>books
+DB_NAME=<DB Name>
 DB_USER=<DB username>
 DB_PASS=<DB password>
 DB_PORT=<DB port>
