--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   - DB_PASS=  
 
 before_script:
-  - psql -c 'create database book_test;' -U postgres
+  - psql -c 'create database todo_test;' -U postgres
   - psql -c "CREATE USER tester WITH PASSWORD null;" -U postgres
   - npm run build
   - npm install -g sequelize-cli
