--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rm -rf ./build && babel -d ./build ./server -s",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
-    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage"
+    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
+    "start": "npm run build && node ./build/index.js"
   },
   "repository": {
     "type": "git",
