--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0"
+  },
+  "engines": {
+    "node": "10.16.2"
   }
 }
