--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
     "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
-    "start": "npm run build && node ./build/index.js"
+    "start": "npm run build && sequelize db:migrate && node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,8 @@
     "path": "^0.12.7",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
