--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "serverless-http": "^2.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -51,7 +52,8 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.1.3",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "serverless-offline": "^6.8.0"
   },
   "engines": {
     "node": "12.18.0",
