--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,7 @@ service: todo-api
 provider:
   name: aws
   runtime: nodejs12.x 
-  stage: dev
+  stage: production
   region: us-east-1
   environment:
     NODE_ENV: production
