--- a/serverless.yml
+++ b/serverless.yml
@@ -16,10 +16,10 @@ provider:
 
 functions:
   app:
-    handler: build/server/app.handler
+    handler: build/app.handler
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
 
-plugin:
+plugins:
   - serverless-offline
