--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ script:
   - npm test
 after_success:
   - npm run coverage
-
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 before_deploy:
   - npm install -g serverless
   - export NODE_EVN=production && npm run build
