--- a/serverless.yml
+++ b/serverless.yml
@@ -8,15 +8,11 @@ provider:
   region: us-east-1
   environment:
     NODE_ENV: production
-    DB_NAME: ${env.DB_NAME}
-    DB_USER: ${env.DB_USER}
-    DB_PASS: ${env.DB_PASS}
-    DB_PORT: ${env.DB_PORT}
-    DB_HOST: ${env.DB_HOST}
+    DATABASE_URL: ${env:DATABASE_URL}
 
 functions:
   app:
-    handler: build/app.handler
+    handler: build/index.handler
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
