--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repository is for CS3219 OTOT task B Resful api with posgres",
   "main": "index.js",
   "scripts": {
-    "dev": "export NODE_ENV=development && export DB_NAME=todo && nodemon --exec babel-node ./server/bin/www",
+    "dev": "nodemon --exec babel-node ./server/bin/www",
     "db": "sequelize db:migrate:undo:all  && sequelize db:migrate",
     "test": "export NODE_ENV=test && export DB_NAME=todo_test &&  sequelize db:migrate:undo:all  && sequelize db:migrate  && nyc --require @babel/register  mocha ./server/tests/test.js --timeout 20000 --exit",
     "build": "rm -rf ./build && babel -d ./build ./server -s",
