--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,7 @@ provider:
   region: us-east-2
   environment:
     NODE_ENV: production
-    DATABASE_URL: ${env:DATABASE_URL}
+    DATABASE_URL: ${env.DATABASE_URL}
 
 functions:
   app:
