--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./server/bin/www",
-    "db": "sequelize db:migrate:undo:all  && sequelize db:migrate",
+    "db": "sequelize db:migrate:undo:all  && sequelize db:migrate && sequelize db:seed:all",
     "test": "export NODE_ENV=test && export DB_NAME=todo_test &&  sequelize db:migrate:undo:all  && sequelize db:migrate  && nyc --require @babel/register  mocha ./server/tests/test.js --timeout 20000 --exit",
     "build": "rm -rf ./build && babel -d ./build ./server -s",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
     "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
-    "start": "npm run build && sequelize db:migrate && node ./build/bin/www.js"
+    "start": "npm run build && npm run db && node ./build/bin/www.js"
   },
   "repository": {
     "type": "git",
