--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
     "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
-    "start": "npm run build && npm run db && node ./build/bin/www.js"
+    "start": "node ./build/bin/www.js"
   },
   "repository": {
     "type": "git",
