--- a/web/package.json
+++ b/web/package.json
@@ -44,5 +44,5 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://6x34q4nhgb.execute-api.us-east-2.amazonaws.com/production"
 }
