--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PORT=<port number>
 NODE_ENV=development
-SECRET=<secretKey>
 
 DB_NAME=todo
 DB_USER=<DB username>
@@ -10,5 +9,6 @@ DB_HOST=127.0.0.1
 TEST_DB_NAME=todo_test
 TEST_DB_USER=<DB username>
 TEST_DB_PASS=<DB password>
+TEST_DB_PORT=<DB port>
 TEST_DB_HOST=127.0.0.1
 DATABASE_URL=
